@@ -213,7 +213,7 @@ public:
 protected:
 
 	Body *body;
-	fixtureudata *data;
+	fixtureudata *udata;
 	b2Fixture *fixture;
 };
 
