@@ -584,6 +584,14 @@ void World::destroy()
 
 	world->DestroyBody(groundBody);
 	Memoizer::remove(world);
+
+	// Remove userdata reference to avoid it sticking around after GC
+	if (begin.ref)     begin.ref->unref();
+	if (end.ref)       end.ref->unref();
+	if (presolve.ref)  presolve.ref->unref();
+	if (postsolve.ref) postsolve.ref->unref();
+	if (filter.ref)    filter.ref->unref();
+
 	delete world;
 	world = nullptr;
 }
